--- a/todo/project.json
+++ b/todo/project.json
@@ -16,8 +16,25 @@
         "polyfills": ["zone.js"],
         "tsConfig": "todo/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["todo/src/favicon.ico", "todo/src/assets"],
-        "styles": ["todo/src/styles.scss"],
+        "assets": [
+          {
+            "glob": "**/*",
+            "input": "assets",
+            "output": "/assets/"
+          },
+          "todo/src/favicon.ico", 
+          "todo/src/assets"
+        ],
+        "styles": [
+          "todo/src/styles.scss",
+          "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+          "node_modules/primeng/resources/primeng.min.css",
+          "node_modules/primeflex/primeflex.min.css",
+          "node_modules/primeicons/primeicons.css"
+        ],
+        "stylePreprocessorOptions": {
+          "includePaths": ["scss"]
+        },
         "scripts": []
       },
       "configurations": {
